WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74029
Compilation error when !ENABLE(WORKERS)
https://bugs.webkit.org/show_bug.cgi?id=74029
Summary
Compilation error when !ENABLE(WORKERS)
Xianzhu Wang
Reported
2011-12-07 15:10:03 PST
When !ENABLE(WORKERS), compilation reports errors for at least the following sources: third_party/WebKit/Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp third_party/WebKit/Source/WebKit/chromium/src/WebWorkerRunLoop.cpp
Attachments
Patch
(5.83 KB, patch)
2011-12-09 18:47 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.82 KB, patch)
2011-12-12 13:16 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-12-08 06:54:19 PST
Also Source/WebCore/storage/IDBFactory.cpp:101: error: invalid static_cast from type 'WebCore::ScriptExecutionContext*' to type 'WebCore::WorkerContext*' make: *** [out/Release/obj.target/webcore_remaining/Source/WebCore/storage/IDBFactory.o] Error 1
David Grogan
Comment 2
2011-12-09 18:47:50 PST
Created
attachment 118677
[details]
Patch
WebKit Review Bot
Comment 3
2011-12-12 12:20:40 PST
Comment on
attachment 118677
[details]
Patch Rejecting
attachment 118677
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: t/git/webkit-commit-queue/Source/WebKit/chromium/v8 --revision 10163 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 48>At revision 10163. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/10844027
David Grogan
Comment 4
2011-12-12 13:16:44 PST
Created
attachment 118829
[details]
Patch for landing
WebKit Review Bot
Comment 5
2011-12-12 14:04:22 PST
Comment on
attachment 118829
[details]
Patch for landing Clearing flags on attachment: 118829 Committed
r102620
: <
http://trac.webkit.org/changeset/102620
>
WebKit Review Bot
Comment 6
2011-12-12 14:04:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug