Fix compilation error when !ENABLE(WORKERS) https://bugs.webkit.org/show_bug.cgi?id=74029

Reviewed by Yury Semikhatsky.

Source/WebCore:

* storage/IDBFactory.cpp:
(WebCore::IDBFactory::open): add #if ENABLE(WORKERS) guard

Source/WebKit/chromium:

* features.gypi:
* src/IDBFactoryBackendProxy.cpp:
(WebKit::IDBFactoryBackendProxy::openFromWorker):
* src/PlatformSupport.cpp:
* src/WebDevToolsAgentImpl.cpp:
(WebKit::WebDevToolsAgent::disconnectEventAsText):
* src/WebWorkerRunLoop.cpp:


Canonical link: https://commits.webkit.org/91015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102620 268f45cc-cd09-0410-ab3c-d52691b4dbfc