Source/WebCore/storage/IDBFactory.cpp
@@ -97,9 +97,13 @@ PassRefPtr<IDBRequest> IDBFactory::open(ScriptExecutionContext* context, const S
         m_backend->open(name, request.get(), context->securityOrigin(), frame, String());
         return request;
     }
+#if ENABLE(WORKERS)
     RefPtr<IDBRequest> request = IDBRequest::create(context, IDBAny::create(this), 0);
     m_backend->openFromWorker(name, request.get(), context->securityOrigin(), static_cast<WorkerContext*>(context), String());
     return request;
+#else
+    return 0;
+#endif
 }
 
 PassRefPtr<IDBVersionChangeRequest> IDBFactory::deleteDatabase(ScriptExecutionContext* context, const String& name, ExceptionCode& ec)
